# python-cli-template

./: LICENSE  README.md  pyproject.toml
cli/: root.py
cli/commands/: goodbye.py  greet.py
utils/: client.py
